--- a/styles/ProjectCard.module.css
+++ b/styles/ProjectCard.module.css
@@ -4,14 +4,14 @@
   flex-direction: column;
   border-radius: 20px;
   cursor: pointer;
-
 }
-.projectImage{
+.projectImage {
   border-radius: 20px;
-  object-fit: contain; 
+  object-fit: contain;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  height: 200px;
+  width: 100%;
 }
 .card:hover {
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
