--- a/styles/ContactCode.module.css
+++ b/styles/ContactCode.module.css
@@ -3,6 +3,16 @@
   font-size: 1.2rem;
   line-height: 2rem;
 }
+.link {
+  text-decoration: underline;
+  font-weight: 500;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+}
+
+.link:hover {
+  text-decoration: none;
+}
 
 .line::before {
   content: counter(line);
@@ -13,7 +23,6 @@
 
 .code a {
   color: var(--accent-color);
-  text-decoration: none;
 }
 
 .code a:hover {
